// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button as a link button types reverse matches snapshot: ReverseButton 1`] = `
<div>
  <a
    class="nhsuk-button nhsuk-button--reverse"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    draggable="false"
    href="/"
    role="button"
  >
    Submit
  </a>
</div>
`;

exports[`Button as a link button types secondary matches snapshot: SecondaryButton 1`] = `
<div>
  <a
    class="nhsuk-button nhsuk-button--secondary"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    draggable="false"
    href="/"
    role="button"
  >
    Submit
  </a>
</div>
`;

exports[`Button as a link matches snapshot: PlainButton 1`] = `
<div>
  <a
    class="nhsuk-button"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    draggable="false"
    href="/"
    role="button"
  >
    Submit
  </a>
</div>
`;

exports[`Button disabled matches snapshot: DisabledButton 1`] = `
<div>
  <button
    aria-disabled="true"
    class="nhsuk-button"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    disabled=""
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button matches snapshot: PlainButton 1`] = `
<div>
  <button
    class="nhsuk-button"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button reverse matches snapshot: ReverseButton 1`] = `
<div>
  <button
    class="nhsuk-button nhsuk-button--reverse"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button secondary matches snapshot: SecondaryButton 1`] = `
<div>
  <button
    class="nhsuk-button nhsuk-button--secondary"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    type="submit"
  >
    Submit
  </button>
</div>
`;
